# CleanEmon-Core

./: .gitignore  LICENSE  setup.cfg
CleanEmonCore/: CouchDBAdapter.py  __init__.py  __main__.py  dotfiles.py  models.py
CleanEmonCore/Events/: __init__.py  builtins.py  events.py
CleanEmonCore/json_utils/: __init__.py  json_utils.py  schemas.py
CleanEmonCore/setup_scripts/: __init__.py  generate_config.py
CleanEmonCore/tests/: test_CouchDBAdapter.py  test_models.py
CleanEmonCore/tests/Events/: test_builtins.py
