[metadata]
name = CleanEmon-Core
version = 0.6.71
author = George Vasiliadis
author_email = geor.vasiliadis@gmail.com
description = The core library used by the CleanEmon ecosystem

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pytest
    jsonschema
    orjson

[options.packages.find]
where = .
